src/objects/vlocity_ins__ProviderFeeSchedule__c.object
<CustomObject>
    <description>Represents a providers base rate factor of the insurance carriers standard fee schedule.</description>
    <fields>
        <fullName>vlocity_ins__BaseRateFactor__c</fullName>
        <label>Base Rate Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeScheduleCode__c</fullName>
        <externalId>true</externalId>
        <label>Fee Schedule Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FeeScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Fee Schedule</label>
        <referenceTo>vlocity_ins__FeeSchedule__c</referenceTo>
        <relationshipLabel>Provider Fee Schedules</relationshipLabel>
        <relationshipName>ProviderFeeScheduleToFeeSchedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Fee Schedule</relationshipLabel>
        <relationshipName>ProviderFeeSchedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Provider Fee Schedule</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Fee Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>